# BE-AIPipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: edges_processed.parquet  graph.pt  nodes_raw_coords.parquet
models/: model_best.pt  model_config.pkl
src/: __init__.py  api.py  cnn_classifier.py  impact_propagation.py  road_state_manager.py  unified_pipeline.py
